@@ -4,6 +4,7 @@
   by double-clicking a table row.
 - The "Show all" checkbox in the search window is now named
   "show completed".
+- There's now an "Add" button in the search window.
 
 
 2013/10/28 (version 1.6)
